fixed alignment issues

--- a/main.css
+++ b/main.css
@@ -1,3 +1,13 @@
 #fingering-app {
     display: none;
 }
+
+#staffArea {
+    float: left;
+    margin: 5px;
+}
+
+#userInput {
+    float: left;
+    margin: 5px;
+}
